Bug 171299 - FILEOPEN DOCX: table text moved into Reference field
Summary: FILEOPEN DOCX: table text moved into Reference field
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.8.0 target:26.2.3
Keywords: filter:docx
Depends on:
Blocks: DOCX-Tables DOCX-Fields
  Show dependency treegraph
 
Reported: 2026-03-13 20:48 UTC by Justin L
Modified: 2026-03-19 21:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-de-69966min.docx: example document minimized (12.45 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2026-03-13 20:48 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2026-03-13 20:48:30 UTC
Created attachment 206151 [details]
forum-mso-de-69966min.docx: example document minimized

Instead of the table contents being placed inside of the table structure, they are being captured as the content of the field-that-contains-the-table.

This problem is inherited from OOo.

Steps to reproduce
1.) open forum-mso-de-69966min.docx in LO

Notice that the table is empty. However, in MS Word, none of the cells are empty.

Found by Collabora's mso-test
Comment 1 Justin L 2026-03-13 20:55:20 UTC
There is an additional problem that was exposed recently. The text 'Zusammenfassung:' was correctly placed in front of the table until 25.8.0.2
commit aa689d596c44c1c51ab9345df5d063768936fe74
Author: Jaume Pujantell on Fri Jun 13 12:05:20 2025 +0200
    tdf#166940 sw: defer line break in ref field
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186008
and a whole bunch of additional empty paragraphs were added after the table.

That just exposed an existing weakness.
Comment 2 m_a_riosv 2026-03-13 23:34:52 UTC
Repro
Version: 26.2.2.1 (X86_64)
Build ID: 251225596f12c6d3f2985252eb1eaca9640c7bfd
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 3 Commit Notification 2026-03-19 00:42:50 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f6e1aa27081c736c3ec45341dab596e529d39f0e

tdf#171299 docx import: don't delay table paragraphs in fields

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-03-19 00:43:53 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/986c69622f2905780778d4bbb38e1658ce5162b1

tdf#171299 docx import: don't move table content into field result

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-03-19 21:37:01 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/0b9cb5e07c4a8853f5c866197f80ed91f962f276

tdf#171299 docx import: don't delay table paragraphs in fields

It will be available in 26.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2026-03-19 21:37:03 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/abd7e909af42e6f9e3b48e428b552fda54b63f88

tdf#171299 docx import: don't move table content into field result

It will be available in 26.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.