tdf#171299 docx import: don't delay table paragraphs in fields

While the field itself may not be able to contain
multiple paragraphs, it should not prevent the table it contains
from having paragraphs.

This fixes a so-called 'regression' exposed by 25.8.0.2 patch
    tdf#166940 sw: defer line break in ref field

make CppunitTest_sw_ooxmlexport21 \
    CPPUNIT_TEST_NAME=testTdf171299_tableInField

cherry-pick from: f6e1aa27081c736c3ec45341dab596e529d39f0e

Change-Id: Ic1c029f4f75404df18cd2245d5b8998c8793a405
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201711
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201676
Tested-by: Jenkins
Reviewed-on: https://gerrit.collaboraoffice.com/c/core/+/2376
Reviewed-by: Thorsten Behrens <thorsten.behrens@collabora.com>
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>